tests/testFiles/semanticErrors/usedotnontationonnumber.meme
ermahgerd d  = 12.3;
ermahgerd c = d[10];
